# neural-network-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/config/: INFO.md  _INFO.md
data/prediction/: INFO.md
data/training/: _INFO.md
neural_network/: __main__.py  application.py  main.py  neural_network.py
neural_network/app/: neural_network.py
neural_network/utils/: array_utils.py  file_utils.py
src/: __main__.py  activation_functions.py  neural_network.py
